Usado Linter para eliminar problemas de formato y usar buenas prácticas.